unpackaged/main/default/objects/Contract/fields/Avg_Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Sales__c</fullName>
    <label>Avg Monthly Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>