unpackaged/main/default/objects/Contract/fields/Avg_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Avg_Utilization__c</fullName>
    <label>Avg Utilization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>