unpackaged/main/default/objects/Contract/fields/AvgNSF__c.field-meta.xml
<CustomField>
    <fullName>AvgNSF__c</fullName>
    <label>AvgNSF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>