unpackaged/main/default/objects/Contract/fields/Axos_Deal__c.field-meta.xml
<CustomField>
    <fullName>Axos_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Axos Deal</label>
    <type>Checkbox</type>
</CustomField>