unpackaged/main/default/objects/Contract/fields/Bankruptcy_Score__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Score__c</fullName>
    <label>Bankruptcy Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>