unpackaged/main/default/objects/Contract/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <label>Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>