unpackaged/main/default/objects/Contract/fields/Broker_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Id__c</fullName>
    <label>Broker Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>