unpackaged/main/default/objects/Contract/fields/Business_Street__c.field-meta.xml
<CustomField>
    <fullName>Business_Street__c</fullName>
    <label>Business Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>