unpackaged/main/default/objects/Contract/fields/Business_Zip__c.field-meta.xml
<CustomField>
    <fullName>Business_Zip__c</fullName>
    <label>Business Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>