unpackaged/main/default/objects/Contract/fields/Cross_Corp_City__c.field-meta.xml
<CustomField>
    <fullName>Cross_Corp_City__c</fullName>
    <description>Created to support loan gen creation of the contract record with cross corp fields populated. This field matches the equivalent field on the opportunity</description>
    <label>Cross Corp City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>