unpackaged/main/default/objects/Contract/fields/Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date__c</fullName>
    <label>Fund Date</label>
    <type>DateTime</type>
</CustomField>