unpackaged/main/default/objects/Contract/fields/G1_Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>G1_Alt_Phone__c</fullName>
    <label>G1 Alt Phone</label>
    <type>Phone</type>
</CustomField>