unpackaged/main/default/objects/Contract/fields/G1_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>G1_Birthdate__c</fullName>
    <label>G1 Birthdate</label>
    <type>Date</type>
</CustomField>