unpackaged/main/default/objects/Contract/fields/G1_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>G1_Credit_Score__c</fullName>
    <label>G1 Credit Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>