unpackaged/main/default/objects/Contract/fields/G1_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>G1_Home_Address__c</fullName>
    <label>G1 Home Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>