unpackaged/main/default/objects/Contract/fields/G1_Home_State__c.field-meta.xml
<CustomField>
    <fullName>G1_Home_State__c</fullName>
    <label>G1 Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>