unpackaged/main/default/objects/Contract/fields/G1_Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>G1_Ownership_Percentage__c</fullName>
    <label>G1 Ownership Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>