unpackaged/main/default/objects/Contract/fields/G1_SSN__c.field-meta.xml
<CustomField>
    <fullName>G1_SSN__c</fullName>
    <label>G1 SSN</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>