unpackaged/main/default/objects/Contract/fields/G1_UW_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>G1_UW_Contact_ID__c</fullName>
    <description>Populates the corresponding Contact ID from Underwriting Org</description>
    <label>G1 UW Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>