unpackaged/main/default/objects/Contract/fields/G2_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>G2_Credit_Score__c</fullName>
    <label>G2 Credit Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>