unpackaged/main/default/objects/Contract/fields/G2_Email__c.field-meta.xml
<CustomField>
    <fullName>G2_Email__c</fullName>
    <label>G2 Email</label>
    <type>Email</type>
</CustomField>