unpackaged/main/default/objects/Contract/fields/G2_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>G2_Home_Phone__c</fullName>
    <label>G2 Home Phone</label>
    <type>Phone</type>
</CustomField>