unpackaged/main/default/objects/Contract/fields/G2_Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>G2_Home_Zip__c</fullName>
    <label>G2 Home Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>