unpackaged/main/default/objects/Contract/fields/G2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>G2_Last_Name__c</fullName>
    <label>G2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>