unpackaged/main/default/objects/Contract/fields/G2_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>G2_Mobile_Phone__c</fullName>
    <label>G2 Mobile Phone</label>
    <type>Phone</type>
</CustomField>