unpackaged/main/default/objects/Contract/fields/G2_Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>G2_Ownership_Percentage__c</fullName>
    <label>G2 Ownership Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>