unpackaged/main/default/objects/Contract/fields/G2_UW_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>G2_UW_Contact_ID__c</fullName>
    <description>Populates with the corresponding Contact ID from UW Org</description>
    <label>G2 UW Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>