unpackaged/main/default/objects/Contract/fields/G3_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>G3_Credit_Score__c</fullName>
    <label>G3 Credit Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>