unpackaged/main/default/objects/Contract/fields/G3_Email__c.field-meta.xml
<CustomField>
    <fullName>G3_Email__c</fullName>
    <label>G3 Email</label>
    <type>Email</type>
</CustomField>