unpackaged/main/default/objects/Contract/fields/G3_Home_City__c.field-meta.xml
<CustomField>
    <fullName>G3_Home_City__c</fullName>
    <label>G3 Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>