unpackaged/main/default/objects/Contract/fields/G3_Home_State__c.field-meta.xml
<CustomField>
    <fullName>G3_Home_State__c</fullName>
    <label>G3 Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>