unpackaged/main/default/objects/Contract/fields/G3_Signatory__c.field-meta.xml
<CustomField>
    <fullName>G3_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G3 Signatory</label>
    <type>Checkbox</type>
</CustomField>