unpackaged/main/default/objects/Contract/fields/G3_SSN__c.field-meta.xml
<CustomField>
    <fullName>G3_SSN__c</fullName>
    <label>G3 SSN</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>sin</maskType>
    <type>EncryptedText</type>
</CustomField>