unpackaged/main/default/objects/Contract/fields/G3_UW_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>G3_UW_Contact_ID__c</fullName>
    <description>Populates with the corresponding Contact ID from UW Org</description>
    <label>G3 UW Contact ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>