unpackaged/main/default/objects/Contract/fields/G4_Home_City__c.field-meta.xml
<CustomField>
    <fullName>G4_Home_City__c</fullName>
    <label>G4 Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>