unpackaged/main/default/objects/Contract/fields/G4_Home_State__c.field-meta.xml
<CustomField>
    <fullName>G4_Home_State__c</fullName>
    <label>G4 Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>