unpackaged/main/default/objects/Contract/fields/G4_Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>G4_Home_Zip__c</fullName>
    <label>G4 Home Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>