unpackaged/main/default/objects/Contract/fields/G4_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>G4_Mobile_Phone__c</fullName>
    <label>G4 Mobile Phone</label>
    <type>Phone</type>
</CustomField>