unpackaged/main/default/objects/Contract/fields/G4_Title__c.field-meta.xml
<CustomField>
    <fullName>G4_Title__c</fullName>
    <label>G4 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>