unpackaged/main/default/objects/Contract/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>