unpackaged/main/default/objects/Contract/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <externalId>true</externalId>
    <label>Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>