unpackaged/main/default/objects/Contract/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>