unpackaged/main/default/objects/Contract/fields/LP_Loan__c.field-meta.xml
<CustomField>
    <fullName>LP_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LP Loan</label>
    <referenceTo>LP_Loan__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>