unpackaged/main/default/objects/Contract/fields/Model_Score__c.field-meta.xml
<CustomField>
    <fullName>Model_Score__c</fullName>
    <label>Model Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>