unpackaged/main/default/objects/Contract/fields/Net_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Net_to_Customer__c</fullName>
    <label>Net to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>