unpackaged/main/default/objects/Contract/fields/NF_SIC_4__c.field-meta.xml
<CustomField>
    <fullName>NF_SIC_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to NF SIC 4 table PD-255</description>
    <label>NF SIC 4</label>
    <referenceTo>NF_SIC_4__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>