unpackaged/main/default/objects/Contract/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <label>Number of Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>