unpackaged/main/default/objects/Contract/fields/Originating_Lender__c.field-meta.xml
<CustomField>
    <fullName>Originating_Lender__c</fullName>
    <label>Originating Lender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Funding</fullName>
            </value>
            <value>
                <fullName>Quick Bridge Funding</fullName>
            </value>
            <value>
                <fullName>National Funding XPRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>