unpackaged/main/default/objects/Contract/fields/Payment_History__c.field-meta.xml
<CustomField>
    <fullName>Payment_History__c</fullName>
    <formula>HYPERLINK("https://nf.my.salesforce.com/lightning/r/Report/00O2T0000075kji/view?queryScope="+Loan_Number__c,"View Report")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment History</label>
    <type>Text</type>
</CustomField>