unpackaged/main/default/objects/Contract/fields/Payoff_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Bank_Account_Name__c</fullName>
    <label>Payoff Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>