unpackaged/main/default/objects/Contract/fields/Payoff_Entity__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Entity__c</fullName>
    <label>Payoff Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>