unpackaged/main/default/objects/Contract/fields/Payoff_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Routing_Number__c</fullName>
    <label>Payoff Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>