unpackaged/main/default/objects/Contract/fields/Payoff_Type__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Type__c</fullName>
    <label>Payoff Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>