unpackaged/main/default/objects/Contract/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Type</description>
    <label>Product Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>