unpackaged/main/default/objects/Contract/fields/Scoring_Model__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Model__c</fullName>
    <label>Scoring Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>