unpackaged/main/default/objects/Contract/validationRules/Contract_Record_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Record_Locked</fullName>
    <active>true</active>
    <description>Unable to edit record if Locked checkbox is checked.</description>
    <errorConditionFormula>AND (
     NOT(ISNEW()), 
     NOT(ISCHANGED(Locked__c)),
     Locked__c = TRUE
)</errorConditionFormula>
    <errorMessage>This record is locked.</errorMessage>
</ValidationRule>